WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148773
Range.deleteContents cannot delete DocType
https://bugs.webkit.org/show_bug.cgi?id=148773
Summary
Range.deleteContents cannot delete DocType
Ryosuke Niwa
Reported
2015-09-03 19:14:21 PDT
<!DOCTYPE html> <html> <body> <script> var range = document.createRange(); range.setStart(document, 0); range.setEnd(document, 1); range.deleteContents(); </script> </body> </html> throws an exception because we attempt to insert a DOCTYPE into a document fragment inside Range::processContents but it shouldn't. This bug was found by the newly added test: LayoutTests/http/tests/w3c/dom/ranges/Range-deleteContents.html
Attachments
Patch
(6.26 KB, patch)
2015-09-16 19:50 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-09-03 19:14:56 PDT
<
rdar://problem/22571280
>
Chris Dumez
Comment 2
2015-09-16 19:50:45 PDT
Created
attachment 261355
[details]
Patch
Chris Dumez
Comment 3
2015-09-17 08:51:21 PDT
Comment on
attachment 261355
[details]
Patch Clearing flags on attachment: 261355 Committed
r189914
: <
http://trac.webkit.org/changeset/189914
>
Chris Dumez
Comment 4
2015-09-17 08:51:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug